base.core/src/main/java/eapli/base/grammarutils/ExamGrammarParser.java
// Generated from C:/Uni/2A/sem4pi-22-23-24/base.core/src/main/antlr4\ExamGrammar.g4 by ANTLR 4.12.0
package eapli.base.grammarutils;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ExamGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ANSWER_ENTRY=1, SOLUTION_ENTRY=2, TRUE_FALSE_RESPONSES=3, TITLE_ENTRY=4, 
		SECTION_ENTRY=5, SECTION_DESCRIPTION_ENTRY=6, FEEDBACK_ENTRY=7, QUESTION_ENTRY=8, 
		POINTS_ENTRY=9, TYPE_OF_GRADE_ENTRY=10, TYPE_OF_FEEDBACK_ENTRY=11, HEADER_DESCRIPTION_ENTRY=12, 
		WITH_PARAM=13, WITHOUT_PARAM=14, COMMA=15, WS=16, HASH=17, NEWLINE=18, 
		WORD=19, COLON=20, DASH=21, INT=22, NUMERICAL_VALUE=23, PUNCTUATION=24, 
		MISSING_WORD=25;
	public static final int
		RULE_prog = 0, RULE_question_type_with_feedback = 1, RULE_question_type_without_feedback = 2, 
		RULE_type_of_grade = 3, RULE_type_of_feedback = 4, RULE_header_description = 5, 
		RULE_multiple_choice_question = 6, RULE_multiple_choice_answer = 7, RULE_multiple_choice_solution = 8, 
		RULE_matching_type_question = 9, RULE_matching_type_answer = 10, RULE_matching_type_solution = 11, 
		RULE_true_false_question = 12, RULE_true_false_answer = 13, RULE_true_false_solution = 14, 
		RULE_select_missing_words = 15, RULE_missing_word_phrase = 16, RULE_missing_word_answer = 17, 
		RULE_missing_word_solution = 18, RULE_list_phrases = 19, RULE_short_answer_question = 20, 
		RULE_short_answer_answer = 21, RULE_short_answer_solution = 22, RULE_numerical_question = 23, 
		RULE_numerical_answer = 24, RULE_numerical_solution = 25, RULE_question = 26, 
		RULE_points = 27, RULE_feedback = 28, RULE_phrase = 29, RULE_phrase_word = 30, 
		RULE_list_with_title = 31, RULE_title_list = 32, RULE_list = 33, RULE_topic_list = 34, 
		RULE_title = 35, RULE_section = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "question_type_with_feedback", "question_type_without_feedback", 
			"type_of_grade", "type_of_feedback", "header_description", "multiple_choice_question", 
			"multiple_choice_answer", "multiple_choice_solution", "matching_type_question", 
			"matching_type_answer", "matching_type_solution", "true_false_question", 
			"true_false_answer", "true_false_solution", "select_missing_words", "missing_word_phrase", 
			"missing_word_answer", "missing_word_solution", "list_phrases", "short_answer_question", 
			"short_answer_answer", "short_answer_solution", "numerical_question", 
			"numerical_answer", "numerical_solution", "question", "points", "feedback", 
			"phrase", "phrase_word", "list_with_title", "title_list", "list", "topic_list", 
			"title", "section"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "','", null, "'#'", null, null, "':'", "'-'", null, 
			null, null, "'||WORD||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ANSWER_ENTRY", "SOLUTION_ENTRY", "TRUE_FALSE_RESPONSES", "TITLE_ENTRY", 
			"SECTION_ENTRY", "SECTION_DESCRIPTION_ENTRY", "FEEDBACK_ENTRY", "QUESTION_ENTRY", 
			"POINTS_ENTRY", "TYPE_OF_GRADE_ENTRY", "TYPE_OF_FEEDBACK_ENTRY", "HEADER_DESCRIPTION_ENTRY", 
			"WITH_PARAM", "WITHOUT_PARAM", "COMMA", "WS", "HASH", "NEWLINE", "WORD", 
			"COLON", "DASH", "INT", "NUMERICAL_VALUE", "PUNCTUATION", "MISSING_WORD"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExamGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExamGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public Type_of_gradeContext type_of_grade() {
			return getRuleContext(Type_of_gradeContext.class,0);
		}
		public Type_of_feedbackContext type_of_feedback() {
			return getRuleContext(Type_of_feedbackContext.class,0);
		}
		public TerminalNode WITH_PARAM() { return getToken(ExamGrammarParser.WITH_PARAM, 0); }
		public TerminalNode WITHOUT_PARAM() { return getToken(ExamGrammarParser.WITHOUT_PARAM, 0); }
		public Header_descriptionContext header_description() {
			return getRuleContext(Header_descriptionContext.class,0);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ExamGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamGrammarParser.NEWLINE, i);
		}
		public List<Question_type_with_feedbackContext> question_type_with_feedback() {
			return getRuleContexts(Question_type_with_feedbackContext.class);
		}
		public Question_type_with_feedbackContext question_type_with_feedback(int i) {
			return getRuleContext(Question_type_with_feedbackContext.class,i);
		}
		public List<Question_type_without_feedbackContext> question_type_without_feedback() {
			return getRuleContexts(Question_type_without_feedbackContext.class);
		}
		public Question_type_without_feedbackContext question_type_without_feedback(int i) {
			return getRuleContext(Question_type_without_feedbackContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			title();
			setState(75);
			type_of_grade();
			setState(76);
			type_of_feedback();
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WITH_PARAM:
				{
				{
				setState(77);
				match(WITH_PARAM);
				setState(79);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(78);
					header_description();
					}
					break;
				}
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(82); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(81);
						match(NEWLINE);
						}
						}
						setState(84); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NEWLINE );
					setState(86);
					section();
					setState(88); 
					_errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							setState(87);
							question_type_with_feedback();
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(90); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
					} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					}
					}
					setState(94); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				}
				break;
			case WITHOUT_PARAM:
				{
				{
				setState(96);
				match(WITHOUT_PARAM);
				setState(98);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(97);
					header_description();
					}
					break;
				}
				setState(111); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(101); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(100);
						match(NEWLINE);
						}
						}
						setState(103); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==NEWLINE );
					setState(105);
					section();
					setState(107); 
					_errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							setState(106);
							question_type_without_feedback();
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(109); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
					} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					}
					}
					setState(113); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Question_type_with_feedbackContext extends ParserRuleContext {
		public Matching_type_questionContext matching_type_question() {
			return getRuleContext(Matching_type_questionContext.class,0);
		}
		public FeedbackContext feedback() {
			return getRuleContext(FeedbackContext.class,0);
		}
		public Select_missing_wordsContext select_missing_words() {
			return getRuleContext(Select_missing_wordsContext.class,0);
		}
		public True_false_questionContext true_false_question() {
			return getRuleContext(True_false_questionContext.class,0);
		}
		public Multiple_choice_questionContext multiple_choice_question() {
			return getRuleContext(Multiple_choice_questionContext.class,0);
		}
		public Short_answer_questionContext short_answer_question() {
			return getRuleContext(Short_answer_questionContext.class,0);
		}
		public Numerical_questionContext numerical_question() {
			return getRuleContext(Numerical_questionContext.class,0);
		}
		public Question_type_with_feedbackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_type_with_feedback; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterQuestion_type_with_feedback(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitQuestion_type_with_feedback(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitQuestion_type_with_feedback(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Question_type_with_feedbackContext question_type_with_feedback() throws RecognitionException {
		Question_type_with_feedbackContext _localctx = new Question_type_with_feedbackContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_question_type_with_feedback);
		try {
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(117);
				matching_type_question();
				setState(119);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(118);
					feedback();
					}
					break;
				}
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(121);
				select_missing_words();
				setState(123);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(122);
					feedback();
					}
					break;
				}
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(125);
				true_false_question();
				setState(127);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(126);
					feedback();
					}
					break;
				}
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(129);
				multiple_choice_question();
				setState(131);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(130);
					feedback();
					}
					break;
				}
				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				{
				setState(133);
				short_answer_question();
				setState(135);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(134);
					feedback();
					}
					break;
				}
				}
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				{
				setState(137);
				numerical_question();
				setState(139);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(138);
					feedback();
					}
					break;
				}
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Question_type_without_feedbackContext extends ParserRuleContext {
		public Matching_type_questionContext matching_type_question() {
			return getRuleContext(Matching_type_questionContext.class,0);
		}
		public Select_missing_wordsContext select_missing_words() {
			return getRuleContext(Select_missing_wordsContext.class,0);
		}
		public True_false_questionContext true_false_question() {
			return getRuleContext(True_false_questionContext.class,0);
		}
		public Multiple_choice_questionContext multiple_choice_question() {
			return getRuleContext(Multiple_choice_questionContext.class,0);
		}
		public Short_answer_questionContext short_answer_question() {
			return getRuleContext(Short_answer_questionContext.class,0);
		}
		public Numerical_questionContext numerical_question() {
			return getRuleContext(Numerical_questionContext.class,0);
		}
		public Question_type_without_feedbackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question_type_without_feedback; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterQuestion_type_without_feedback(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitQuestion_type_without_feedback(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitQuestion_type_without_feedback(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Question_type_without_feedbackContext question_type_without_feedback() throws RecognitionException {
		Question_type_without_feedbackContext _localctx = new Question_type_without_feedbackContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_question_type_without_feedback);
		try {
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				matching_type_question();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				select_missing_words();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(145);
				true_false_question();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(146);
				multiple_choice_question();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(147);
				short_answer_question();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(148);
				numerical_question();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_of_gradeContext extends ParserRuleContext {
		public TerminalNode TYPE_OF_GRADE_ENTRY() { return getToken(ExamGrammarParser.TYPE_OF_GRADE_ENTRY, 0); }
		public TerminalNode WITH_PARAM() { return getToken(ExamGrammarParser.WITH_PARAM, 0); }
		public TerminalNode WITHOUT_PARAM() { return getToken(ExamGrammarParser.WITHOUT_PARAM, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ExamGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamGrammarParser.NEWLINE, i);
		}
		public Type_of_gradeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_of_grade; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterType_of_grade(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitType_of_grade(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitType_of_grade(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_of_gradeContext type_of_grade() throws RecognitionException {
		Type_of_gradeContext _localctx = new Type_of_gradeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type_of_grade);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(151);
				match(NEWLINE);
				}
				}
				setState(154); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(156);
			match(TYPE_OF_GRADE_ENTRY);
			setState(157);
			_la = _input.LA(1);
			if ( !(_la==WITH_PARAM || _la==WITHOUT_PARAM) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_of_feedbackContext extends ParserRuleContext {
		public TerminalNode TYPE_OF_FEEDBACK_ENTRY() { return getToken(ExamGrammarParser.TYPE_OF_FEEDBACK_ENTRY, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ExamGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamGrammarParser.NEWLINE, i);
		}
		public Type_of_feedbackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_of_feedback; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterType_of_feedback(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitType_of_feedback(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitType_of_feedback(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_of_feedbackContext type_of_feedback() throws RecognitionException {
		Type_of_feedbackContext _localctx = new Type_of_feedbackContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type_of_feedback);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(159);
				match(NEWLINE);
				}
				}
				setState(162); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(164);
			match(TYPE_OF_FEEDBACK_ENTRY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Header_descriptionContext extends ParserRuleContext {
		public TerminalNode HEADER_DESCRIPTION_ENTRY() { return getToken(ExamGrammarParser.HEADER_DESCRIPTION_ENTRY, 0); }
		public PhraseContext phrase() {
			return getRuleContext(PhraseContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ExamGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamGrammarParser.NEWLINE, i);
		}
		public Header_descriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterHeader_description(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitHeader_description(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitHeader_description(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Header_descriptionContext header_description() throws RecognitionException {
		Header_descriptionContext _localctx = new Header_descriptionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_header_description);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(166);
				match(NEWLINE);
				}
				}
				setState(169); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(171);
			match(HEADER_DESCRIPTION_ENTRY);
			setState(172);
			phrase();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Multiple_choice_questionContext extends ParserRuleContext {
		public PointsContext points() {
			return getRuleContext(PointsContext.class,0);
		}
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public List_with_titleContext list_with_title() {
			return getRuleContext(List_with_titleContext.class,0);
		}
		public Multiple_choice_answerContext multiple_choice_answer() {
			return getRuleContext(Multiple_choice_answerContext.class,0);
		}
		public Multiple_choice_solutionContext multiple_choice_solution() {
			return getRuleContext(Multiple_choice_solutionContext.class,0);
		}
		public Multiple_choice_questionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiple_choice_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).enterMultiple_choice_question(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamGrammarListener ) ((ExamGrammarListener)listener).exitMultiple_choice_question(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamGrammarVisitor ) return ((ExamGrammarVisitor<? extends T>)visitor).visitMultiple_choice_question(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multiple_choice_questionContext multiple_choice_question() throws RecognitionException {
		Multiple_choice_questionContext _localctx = new Multiple_choice_questionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_multiple_choice_question);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			points();
			setState(175);
			question();
			setState(176);
			list_with_title();
			setState(177);
			multiple_choice_answer();
			setState(178);
			multiple_choice_solution();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
